redirect homepage to about me

--- a/index.html
+++ b/index.html
@@ -2,3 +2,9 @@
 layout: home
 author_profile: true
 ---
+<html>
+    <head>
+	<meta http-equiv="refresh" content="0; url=https://susanhao.github.io/about/">
+	<link rel="canonical" href="https://susanhao.github.io/about/" />
+    </head>
+</html>
